Add Gradle wrapper, docs overview, broaden gitignore
- Ignore .gradle/, build/, and common IDE/OS noise; stop tracking workspace.xml
- Add settings.gradle and Gradle wrapper for reproducible builds
- Add docs/OVERVIEW.md project documentation
- Ray tracing and build.gradle updates

Made-with: Cursor